Avances con nuevos cambios
