# app/Http/Controllers/ApplicantsController.php
@@ -33,6 +33,7 @@ class ApplicantsController extends Controller
      *              @OA\Property(property="military", type="boolean", format="boolean", example=""),
      *              @OA\Property(property="institution", type="string", format="string", example=""),
      *              @OA\Property(property="range", type="string", format="string", example=""),
+     *              @OA\Property(property="other", type="string", example=""),
      *              @OA\Property(property="email", type="string", format="string", example=""),
      *              @OA\Property(property="name_work_reference_1", type="string", format="string", example=""),
      *              @OA\Property(property="phone_work_reference_1", type="string", format="string", example=""),
@@ -90,6 +91,7 @@ class ApplicantsController extends Controller
      *              @OA\Property(property="military", type="boolean", format="boolean", example="true"),
      *              @OA\Property(property="institution", type="string", format="string", example=""),
      *              @OA\Property(property="range", type="string", format="string", example=""),
+     *              @OA\Property(property="other", type="string", example=""),
      *              @OA\Property(property="email", type="string", format="string", example=""),
      *              @OA\Property(property="name_work_reference_1", type="string", format="string", example=""),
      *              @OA\Property(property="phone_work_reference_1", type="string", format="string", example=""),
@@ -145,6 +147,7 @@ class ApplicantsController extends Controller
      *                 @OA\Property(property="military", type="boolean", example=true),
      *                 @OA\Property(property="institution", type="string", example="ARD"),
      *                 @OA\Property(property="range", type="string", example="Teniente"),
+     *                 @OA\Property(property="other", type="string", example="Gerente de la academia"),
      *                 @OA\Property(property="email", type="string", example="juan@gmail.com"),
      *                 @OA\Property(property="name_work_reference_1", type="string", format="string", example="Pedro Sanchez"),
      *                 @OA\Property(property="phone_work_reference_1", type="string", format="string", example="8099886700"),
@@ -226,6 +229,7 @@ class ApplicantsController extends Controller
      *                 @OA\Property(property="military", type="boolean", example=true),
      *                 @OA\Property(property="institution", type="string", example="ARD"),
      *                 @OA\Property(property="range", type="string", example="Teniente"),
+     *                 @OA\Property(property="other", type="string", example="Gerente de la academia"),
      *                 @OA\Property(property="email", type="string", example="juan@gmail.com"),
      *                 @OA\Property(property="name_work_reference_1", type="string", format="string", example="Pedro Sanchez"),
      *                 @OA\Property(property="phone_work_reference_1", type="string", format="string", example="8099886700"),
